# etl-workflow

./: .gitignore  Dockerfile  Makefile  README.md  app.py  backend-engineer-test.md  data-generator.py  database-schema.sql  docker-compose.yml  etl.py  pyproject.toml  raw.txt  schema.graphql  workflow.py
ecommerce_data/: customers.csv  order_items.csv  orders.csv  product_categories.csv  products.csv  sample_customers.csv  sample_order_items_backup.csv  sample_orders.csv  sample_products.csv
